k8s/nginx/deployment.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: nginx
spec:
  containers:
    - name: nginx
      image: adrian/nginx:latest
      ports:
        - containerPort: 80
        - containerPort: 443
